# otus_dz7_nickname

./: .gitignore  .travis.yml  CMakeLists.txt  nickname.cpp  testinput
